--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+                  <plugin>
+                  <artifactId>maven-war-plugin</artifactId>
+                  <version>3.3.2</version>
+             </plugin>
+         </plugins>
         </plugins>
     </build>
 </project>
