--- a/pom.xml
+++ b/pom.xml
@@ -8,30 +8,65 @@
     <name>hello</name>
     <url>https://github.com/boxfuse/boxfuse-sample-java-war-hello</url>
     <dependencies>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
+        
+    <dependencies>
+         <dependency>
+             <groupId>javax</groupId>
+             <artifactId>javaee-api</artifactId>
+             <version>7.0</version>
+             <scope>provided</scope>
+         </dependency>
     </dependencies>
     <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            
-            </plugin>
-                  <plugin>
+         <resources>
+             <resource>
+                 <filtering>true</filtering>
+                 <directory>src/main/resources</directory>
+             </resource>
+             <resource>
+                 <directory>src/main/docs</directory>
+                 <filtering>true</filtering>
+             </resource>
+             <resource>
+                 <directory>src/main/java</directory>
+                 <includes>
+                     <include>**/*.xml</include>
+                     <include>**/*.properties</include>
+                 </includes>
+             </resource>
+         </resources>
+         <testResources>
+             <testResource>
+                  <filtering>true</filtering>
+                  <directory>src/test/resources</directory>
+             </testResource>
+             <testResource>
+                  <directory>src/test/java/</directory>
+             </testResource>
+         </testResources>
+         <plugins>
+             <plugin>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.3</version>
+                  <configuration>
+                       <source>1.8</source>
+                       <target>1.8</target>
+                  </configuration>
+             </plugin>
+             <plugin>
                   <artifactId>maven-war-plugin</artifactId>
                   <version>3.3.2</version>
              </plugin>
          </plugins>
-        </plugins>
+         <finalName>myapp</finalName>
     </build>
+    <repositories>
+        <repository>
+            <id>prime-repo</id>
+            <name>PrimeFaces Maven Repository</name>
+            <url>https://repository.primefaces.org</url>
+            <layout>default</layout>
+        </repository>
+   </repositories>
+    
 </project>
