--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
     <version>1.0</version>
     <name>hello</name>
     <url>https://github.com/boxfuse/boxfuse-sample-java-war-hello</url>
+          <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>hjojoj
+    </properties
     <dependencies>
-        
-    <dependencies>
+         <dependencies>
          <dependency>
              <groupId>javax</groupId>
              <artifactId>javaee-api</artifactId>
