--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.boxfuse.samples</groupId>
-    <artifactId>hello</artifactId>
+    <groupId>com.github.adminfaces</groupId>
+    <artifactId>project</artifactId>
+    <version>0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <version>1.0</version>
-    <name>hello</name>
-    <url>https://github.com/boxfuse/boxfuse-sample-java-war-hello</url>
-          <properties>
+    <name>myapp</name>
+
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>hjojoj
-    </properties
+    </properties>
+ 
     <dependencies>
-         <dependencies>
          <dependency>
              <groupId>javax</groupId>
              <artifactId>javaee-api</artifactId>
@@ -70,5 +71,4 @@
             <layout>default</layout>
         </repository>
    </repositories>
-    
 </project>
